<resources>
    <string name="app_name" translatable="false">FollowPark</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>


    <string name="you_have_account">You have account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password ?</string>
    <string name="new_user_sign_up_now">New user ? Sign up now</string>
    <string name="other_login">Other login</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_with_email_address">Sign Up With Email Address</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="re_password">Re-Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="followpark">FollowPark</string>
    <string name="Name">Name</string>
    <string name="Directins">Directins</string>
</resources>