<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:layout_gravity="center"

    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Here's\nyour first\netsp with \nus !"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_hero" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/loginViewMargin"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/modifiedEditText"
                                android:layout_width="match_parent"
                                android:hint="First name"
                                android:inputType="textPersonName"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewMargin"

                            >

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/modifiedEditText"
                                android:hint="Last name"
                                android:inputType="textPersonName"
                                android:maxLines="1"

                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="ID"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="@string/re_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="Mobile Number"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewMargin">

                        <EditText
                            style="@style/modifiedEditText"
                            android:hint="Garage location"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Sign Up"
                        style="@style/loginButton"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>